# clawhp

./: .gitignore  README.md  index.html  package-lock.json  package.json  skillhub.bundle.js  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-03-20-native-chat-design.md  2026-03-26-bailian-provider-design.md
scripts/: import-agency-agents.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  channels.rs  config.rs  event.rs  gateway.rs  install.rs  lib.rs  main.rs  models.rs  skills.rs  state.rs  system.rs  terminal.rs  types.rs  update.rs  usage.rs
src-tauri/src/util/: command.rs  mod.rs  path.rs  platform.rs  text.rs
src/components/: AgentsPage.tsx  ChannelsPage.tsx  CompleteStep.tsx  ConfigureStep.tsx  ConfirmActionDialog.tsx  DashboardContent.tsx  InstallStep.tsx  LoadingScreen.tsx  ModelsPage.tsx  PageShell.tsx  SettingsPage.tsx  SkillsInstallStep.tsx  SkillsPage.tsx  SystemCheckStep.tsx  UsagePage.tsx  WelcomeStep.tsx  app-sidebar.tsx
src/components/__tests__/: ModelsPage.test.tsx
src/components/ui/: button.tsx  card.tsx  module-tabs.tsx  sidebar.tsx
src/data/: agent-presets.json
src/test/: setup.ts
